syntax = "proto3";

package proto.v1;

import "google/protobuf/timestamp.proto";

option go_package = "proto/go/v1";

enum WorkflowLanguage {
  WORKFLOW_LANGUAGE_UNSPECIFIED = 0;
  WORKFLOW_LANGUAGE_DENO = 1;
}

message DockerRunMeta {
  google.protobuf.Timestamp created_at = 1;
}

message FlyRunMeta {
  string app_name = 1;
  google.protobuf.Timestamp created_at = 2;
  string parent_runner_machine_id = 3;
}

enum Trigger {
  TRIGGER_UNSPECIFIED = 0;
  TRIGGER_MANUAL = 1;
  TRIGGER_PUSH = 2;
  TRIGGER_PR_OPENED = 3;
  TRIGGER_PR_SYNC = 4;
  TRIGGER_PR_CLOSED = 5;
}

message WorkflowMeta {
  string workflow_jwt = 1;
  string name = 2;
  string address = 3;
  google.protobuf.Timestamp started_at = 4;
  google.protobuf.Timestamp timeout_at = 5;
  string runnner = 6;

  GitRepo repo = 7;

  optional int32 pr_number = 8;
  Trigger trigger = 9;

  oneof runner_meta {
    FlyRunMeta fly_meta = 10;
    DockerRunMeta docker_meta = 11;
  }

}

message JobMeta {
  string id = 1;
  string name = 2;
  string address = 3;
  string runner = 4;

  oneof runner_meta {
    FlyRunMeta fly_meta = 5;
    DockerRunMeta docker_meta = 6;
  }
}

message TaskMeta {
  string id = 1;
  string name = 2;

  message Docker {
    string container_id = 1;
  }

  message Native {}

  oneof specific_meta{
    Docker docker_meta = 3;
    Native native_meta = 4;
  }
}

message EnvironmentVariable {
  string key = 1;
  string value = 2;
}

message GitRepo {
  string url = 1;
  string sha = 2;
  string branch = 3;
  int32 fetch_depth = 4;
}

message ExecInfo {
  string cmd = 1;
  string cwd = 2;
  repeated EnvironmentVariable env = 3;
}

message StepExecPayload {
  google.protobuf.Timestamp timestamp = 1;

  oneof log_data {
    bytes stdout = 2;
    bytes stderr = 3;
    int32 exit_code = 4;
  }
}

message LogMessage {
  string workflow_jwt = 1;
  optional string job_id = 2; // If not set, it's a workflow orchestration log

  message ExecData {
    enum Type {
      TYPE_UNSPECIFIED = 0;
      TYPE_STDOUT = 1;
      TYPE_STDERR = 2;
    }

    Type type = 1;
    bytes data = 2;

    string written_at = 3;
  }

  oneof log_data {
    ExecData exec_data = 3;
  }
}


enum Conclusion {
  CONCLUSION_UNSPECIFIED = 0;
  CONCLUSION_SUCCESS = 1;
  CONCLUSION_FAILURE = 2;
  CONCLUSION_SKIPPED = 3;
}


message StartTaskData {
  string name = 1;

  message Docker {

    message DockerVolume {

      enum Type {
        TYPE_UNSPECIFIED = 0;
        TYPE_BIND = 1;
        TYPE_VOLUME = 2;
      }

      string source = 1;
      Type type = 2;
      string target = 3;
    }

    string image = 1;
    repeated DockerVolume volumes = 2;

  }

  message Native {}

  oneof data {
    Docker docker_data = 2;
    Native native_data = 3;
  }
 }

message WorkflowAlert {
    enum Type {
        TYPE_UNSPECIFIED = 0;
        TYPE_ERROR = 1;
        TYPE_WARNING = 2;
        TYPE_INFO = 3;
    }

    Type type = 2;
    string title = 3;
    string message = 4;
}
